fixing css to keep toggle button from shifting back and forth with changing text

--- a/index.css
+++ b/index.css
@@ -58,7 +58,6 @@ li {
 }
 
 #status, #toggleBtn {
-    display: inline;
-    margin-right: 30px;
+    display: inline-block;
     width: 200px;
 }
